snowflake-songs-app/src/style/snowflake.css
.snowflake-card {
	color: #dadada;
	text-align: center;
	max-width: 300px;
}

.snowflake-card a {
	color: #999;
	text-decoration: none;
	cursor: pointer;
	font-size: 0.8em;
}

.snowflake-card small {
	font-size: 0.8em;
	color: #777;
}

.snowflake {}

.snowflake .section path {
	stroke: #cbcbcb;
	stroke-width: 0.5px;
	fill-opacity: 0.5;
	mix-blend-mode: "soft-light";
}

